install.ps1 runs better, installs the StartAction and StartProgram in the right node(s) in the xml document.

--- a/reports/xUnit/Drey.Configuration.Tests/index.html
+++ b/reports/xUnit/Drey.Configuration.Tests/index.html
@@ -48,16 +48,16 @@
     <div>
           Tests run: <a href="#all"><b>41</b></a>  
           
-          Run time: <b>17.656s</b></div>
+          Run time: <b>15.939s</b></div>
     <br />
     <h2>
       <a id="all" />All tests
         </h2>
     <h5>Click test class name to expand/collapse test details</h5>
     <h3>
-      <span class="timing">6.269s
+      <span class="timing">8.850s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0EJG')" ondblclick="ToggleClass('classID0EJG')">
+      <span class="clickable" onclick="ToggleClass('classID0ECAAC')" ondblclick="ToggleClass('classID0ECAAC')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Modules.AppletModuleTests
                <span class="testcount">
@@ -65,52 +65,52 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0EJG">
+    <div class="indent" style="display: none;" id="classID0ECAAC">
       <div class="row">
-        <span class="timing">0.7694598s
+        <span class="timing">0.6239939s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Get_New_AppSetting_Page<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.8227344s
+        <span class="timing">4.3646318s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Get_New_ConnectionString_Page<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.7567909s
+        <span class="timing">0.6086778s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Post_ConnectionString_For_Storage<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.7723328s
+        <span class="timing">0.652213s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Post_Setting_For_Storage<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.7703683s
+        <span class="timing">0.6543862s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Retrieve_ConnectionString_For_Edit<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.7817766s
+        <span class="timing">0.6554487s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Can_Retrieve_Setting_For_Edit<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.7734196s
+        <span class="timing">0.5958684s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.CanGetDashboard<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.8217495s
+        <span class="timing">0.6946348s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.AppletModuleTests.Validation_Errors_For_ConnectionString_Do_Not_Redirect<br clear="all" /></div>
     </div>
     <h3>
-      <span class="timing">3.644s
+      <span class="timing">1.213s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0EBAAC')" ondblclick="ToggleClass('classID0EBAAC')">
+      <span class="clickable" onclick="ToggleClass('classID0EY')" ondblclick="ToggleClass('classID0EY')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Modules.HomeModuleTests
                <span class="testcount">
@@ -118,22 +118,22 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0EBAAC">
+    <div class="indent" style="display: none;" id="classID0EY">
       <div class="row">
-        <span class="timing">2.8516321s
+        <span class="timing">0.6290695s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.HomeModuleTests.Loads_Index_When_Configured<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.7924706s
+        <span class="timing">0.5838203s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Modules.HomeModuleTests.Redirects_To_Setup_When_Not_Configured<br clear="all" /></div>
     </div>
     <h3>
-      <span class="timing">5.245s
+      <span class="timing">3.372s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0EGE')" ondblclick="ToggleClass('classID0EGE')">
+      <span class="clickable" onclick="ToggleClass('classID0E5F')" ondblclick="ToggleClass('classID0E5F')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Repositories.SqliteRepositories.ConnectionStringRepositoryTests
                <span class="testcount">
@@ -141,62 +141,62 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0EGE">
+    <div class="indent" style="display: none;" id="classID0E5F">
       <div class="row">
-        <span class="timing">2.0975741s
+        <span class="timing">0.3562019s
         </span>
         <span class="success">✔</span>
        Can get an entity from the database.<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.2437155s
+        <span class="timing">0.2352449s
         </span>
         <span class="success">✔</span>
        Can query with no data, and get no results back successfully.<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.35424s
+        <span class="timing">0.3551656s
         </span>
         <span class="success">✔</span>
        Can retrieve a connection string by its package id and name<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.3533242s
+        <span class="timing">0.3520109s
         </span>
         <span class="success">✔</span>
        Can retrieve a connection string from the repository by its package id and name.<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.3626854s
+        <span class="timing">0.3570643s
         </span>
         <span class="success">✔</span>
        Can retrieve data for a given package<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.3395546s
+        <span class="timing">0.3643942s
         </span>
         <span class="success">✔</span>
        Can Retrieve data when data exists within the database.<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.2840287s
+        <span class="timing">0.232644s
         </span>
         <span class="success">✔</span>
        Can Store a viewmodel successfully.<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.443171s
+        <span class="timing">0.2801662s
         </span>
         <span class="success">✔</span>
        Can store an entity successfully.<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.3785566s
+        <span class="timing">0.4712879s
         </span>
         <span class="success">✔</span>
        Can update a viewmodel that was created from an entity.<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.3876631s
+        <span class="timing">0.368015s
         </span>
         <span class="success">✔</span>
        Can update an entity<br clear="all" /></div>
     </div>
     <h3>
-      <span class="timing">1.914s
+      <span class="timing">2.199s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0EUAAC')" ondblclick="ToggleClass('classID0EUAAC')">
+      <span class="clickable" onclick="ToggleClass('classID0ELB')" ondblclick="ToggleClass('classID0ELB')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Repositories.SqliteRepositories.PackageSettingRepositoryTests
                <span class="testcount">
@@ -204,37 +204,37 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0EUAAC">
+    <div class="indent" style="display: none;" id="classID0ELB">
       <div class="row">
-        <span class="timing">0.3489405s
+        <span class="timing">0.2581775s
         </span>
         <span class="success">✔</span>
        All Succeeds without data<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.4489983s
+        <span class="timing">0.3874328s
         </span>
         <span class="success">✔</span>
        Can retrieve a list of package settings for a package<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.5436348s
+        <span class="timing">1.0046239s
         </span>
         <span class="success">✔</span>
        Can retrieve an entity by the package id and key<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.2381424s
+        <span class="timing">0.2655677s
         </span>
         <span class="success">✔</span>
        Can store a viewmodel<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.3341242s
+        <span class="timing">0.2835086s
         </span>
         <span class="success">✔</span>
        Can Update data<br clear="all" /></div>
     </div>
     <h3>
-      <span class="timing">0.096s
+      <span class="timing">0.111s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0E4B')" ondblclick="ToggleClass('classID0E4B')">
+      <span class="clickable" onclick="ToggleClass('classID0EVD')" ondblclick="ToggleClass('classID0EVD')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Services.GlobalSettingsServiceTests
                <span class="testcount">
@@ -242,67 +242,67 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0E4B">
+    <div class="indent" style="display: none;" id="classID0EVD">
       <div class="row">
-        <span class="timing">0.0356826s
+        <span class="timing">0.0383409s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.CanRetrieveValidSSL<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0013813s
+        <span class="timing">0.0023784s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: "", sslCert: null, isConfigured: False)<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.0012965s
+        <span class="timing">0.0020594s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: "http://time.is/utc", sslCert: "", isConfigured: False)<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0076657s
+        <span class="timing">0.0089062s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: "http://time.is/utc", sslCert: "AAAAAAAAAAAAAA==", isConfigured: False)<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.0265304s
+        <span class="timing">0.0224493s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: "http://time.is/utc", sslCert: "MIIKcAIBAzCCCjAGCSqGSIb3DQEHAaCCCiEEggodMIIKGTCCBf"..., isConfigured: True)<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0013391s
+        <span class="timing">0.0017367s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: "http://time.is/utc", sslCert: null, isConfigured: False)<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.0037792s
+        <span class="timing">0.0118252s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.HasValidSettingsTests(hostUrl: null, sslCert: null, isConfigured: False)<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0123285s
+        <span class="timing">0.017425s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.ServerHostnameCanBeSaved<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.0011239s
+        <span class="timing">0.0012118s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.SettingsCanBeSavedFromPmo<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0025065s
+        <span class="timing">0.0025358s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.SSLCertificateCanBeSaved<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.002088s
+        <span class="timing">0.0023974s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.GlobalSettingsServiceTests.UnsetSSLWillReturnNull<br clear="all" /></div>
     </div>
     <h3>
-      <span class="timing">0.381s
+      <span class="timing">0.059s
             </span>
-      <span class="clickable" onclick="ToggleClass('classID0EY')" ondblclick="ToggleClass('classID0EY')">
+      <span class="clickable" onclick="ToggleClass('classID0EQC')" ondblclick="ToggleClass('classID0EQC')">
         <span class="success">✔</span>
                Drey.Configuration.Tests.Services.PackageServiceTests
                <span class="testcount">
@@ -310,29 +310,29 @@
               </span></span>
       <br clear="all" />
     </h3>
-    <div class="indent" style="display: none;" id="classID0EY">
+    <div class="indent" style="display: none;" id="classID0EQC">
       <div class="row">
-        <span class="timing">0.362516s
+        <span class="timing">0.0460125s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.PackageServiceTests.CanDiffReleases<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0040852s
+        <span class="timing">0.0031969s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.PackageServiceTests.CanGetPackages<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.001609s
+        <span class="timing">0.0017862s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.PackageServiceTests.CanGetReleases<br clear="all" /></div>
       <div class="altrow">
-        <span class="timing">0.0094326s
+        <span class="timing">0.004408s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.PackageServiceTests.CanRecordReleases<br clear="all" /></div>
       <div class="row">
-        <span class="timing">0.0037302s
+        <span class="timing">0.0036241s
         </span>
         <span class="success">✔</span>
        Drey.Configuration.Tests.Services.PackageServiceTests.ReleasesWithUnregisteredPackageId_ShouldDiff_AllReleases<br clear="all" /></div>
